fix overflow

--- a/src/components/landing/Landing.module.css
+++ b/src/components/landing/Landing.module.css
@@ -1,8 +1,7 @@
 .background {
     position: fixed;
-    top: 0;
-    left: 0;
-    overflow: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
     width: 100%;
     height: 100%;
     animation: fade-in 1s ease-in forwards;
